impl/tests/errors/__snapshots__/test_enum_tuple_inexhaustive.ambr
# serializer version: 1
# name: test_match_tuple_inexhaustive_match_output
  '''
  
  [31m[E07] Error:[0m Match does not cover all cases for type [38;5;201mMaybeBool[0m
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:6:1[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m6 │[0m ╭─▶ match [38;5;201mM[0m[38;5;201ma[0m[38;5;201my[0m[38;5;201mb[0m[38;5;201me[0m[38;5;201mB[0m[38;5;201mo[0m[38;5;201mo[0m[38;5;201ml[0m[38;5;201m:[0m[38;5;201m:[0m[38;5;201mN[0m[38;5;201mo[0m[38;5;201mn[0m[38;5;201me[0m {
   [38;5;240m  │[0m │         [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m  
   [38;5;240m  │[0m │                [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m This is of type [38;5;201mMaybeBool[0m
   [38;5;240m  ┆[0m ┆   
   [38;5;246m9 │[0m ├─▶ }
   [38;5;240m  │[0m │      
   [38;5;240m  │[0m ╰────── Add case block for value `MaybeBool::Some(False)`
  [38;5;246m───╯[0m
  
  
  '''
# ---
